Update links in index.html for NG.CASH

--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
         <p>Em poucos segundos, você acessa sua conta NG.CASH.E se caso você tiver grana na sua conta Z1, fica tranquilo, sua grana estará disponível na sua nova conta NG.CASH, para você fazer o que quiser com ela.</p>
         
         <div class="link-section">
-            <p>Baixe o NG.CASH</p>
-            <p>Quer ver mais sobre sua nova conta?</p>
+            <p><a href="https://ngcash.sng.link/Andua/s8rv/ct8u" target="_blank">Baixe o NG.CASH</a></p>
+            <p><a href="https://www.ng.cash/z1-ng" target="_blank">Quer ver mais sobre sua nova conta?</a></p>
         </div>
         
         <p>Se tiver qualquer dúvida entre em contato com <a href="mailto:suporte@ng.cash">suporte@ng.cash</a>, ou diretamente no atendimento do app NG.CASH.</p>
